config/samples/github_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-service
  namespace: kubetempura-system
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    control-plane: controller-manager
