config/samples/github_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-ingress
  namespace: kubetempura-system
spec:
  defaultBackend:
    service:
      name: github-service
      port:
        number: 3000
